--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,24 @@
   </head>
 
   <body>
+    <header class="header"> 
+      <div class="searchbar"></div>
+      <div class="heading">
+      <li><%= link_to 'My Gear', posts_path, class: "title" %></li></div>
+      <div class="navbar">
+        <ul class="nav-lists">
+      <% if user_signed_in? %>
+      <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
+      <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
+      <% else %>
+      <li><%= link_to 'Login', new_user_session_path, class: "login" %></li>
+      <li><%= link_to 'Sign up', new_user_registration_path, class: "sign-up" %></li>
+      <% end %>
+        </ul>
+        </div>
+        <div class="underline"></div>
+    </header>
+
     <%= yield %>
   </body>
 </html>
