--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,7 @@
-<h1>ねまぎまぐ</h1>
+  <div class="contents">
+    <div class="first-view">
+    <%= link_to image_tag("topguitar.jpg", class: :topimage) %>
+    </div>
+    <div class="middle-content">
+    </div>
+  </div>
