--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <ul class="nav-lists">
       <% if user_signed_in? %>
       <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
-      <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
+      <li><%= link_to current_user.nickname, user_path(current_user.id), class: "user-nickname" %></li>
       <% else %>
       <li><%= link_to 'Login', new_user_session_path, class: "login" %></li>
       <li><%= link_to 'Sign up', new_user_registration_path, class: "sign-up" %></li>
