--- a/app/assets/stylesheets/user/registration.css
+++ b/app/assets/stylesheets/user/registration.css
@@ -1,30 +1,72 @@
-.user__wrapper{
-  min-height: calc(100vh - 161px);
+* {
+  font-family: 'Maven Pro', sans-serif;
+  box-sizing: border-box;
 }
-.table{
-  border-collapse: collapse;
-  margin-bottom: 32px;
+
+body,html {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background-image: linear-gradient(180deg, #a4a4d1 70%, #4040a8);
+  text-align: center;
+  font-family: 'Segoe UI';
+}
+
+form {
+  width: 40%;
+  margin-left: 30%;
+  padding-top: 10%;
+}
+
+input {
+  width: 100%;
+  background: transparent;
+  border-bottom: solid 1px #7053c4;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  font-size: 1rem;
+  padding: 0.5em 0.4em;
+  transition: all 0.4s;
+  color: #BDBDBD;;
+  margin: 0.7rem 0;
+}
+input:focus {
+  background: #7035c4;
+  transform: scale3d(1.06,1.06,1.06);
+}
+
+button {
+  background: transparent;
   width: 50%;
+  margin-top: 2.5rem;
+  font-size: 1rem;
+  border: solid 1px #7053c4;
+  padding: 1em 0;
+  color: #bdc3c7;
+  transition: all 0.6s;
 }
-.table__col1{
-  text-align: left;
-  font-weight: bold;
-  background: #fafafa;
-  border-collapse: collapse;
-  border: 1px solid #f5f5f5;
-  width: 30%;
-  padding: 8px;
+button:hover {
+  cursor:pointer;
+  background: #7035c4;
 }
-.table__col2{
-  text-align: left;
-  border: 1px solid #f5f5f5;
-  border-collapse: collapse;
-  width: 70%;
-  padding: 16px 8px;
+
+h1 {
+  color: #bdc3c7;
+  border-bottom: solid 1px #7035c4;
+  padding: 0 0 0.8em 0;
+  width: 50%;
+  margin-left: 25%;
+  margin-bottom: 1em;
 }
-.user__card {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+@media (max-width: 550px) {
+  form {
+  width: 90%;
+  margin-left: 3%;
+  padding-top: 5%;
+}
+  input {
+    font-size: 1em;
+  }
 }
