--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,15 @@
+  <!doctype html>
+<html>
+  <head>
+    <!-- Place your kit's code here -->
+    <script src="https://kit.fontawesome.com/f30c31a4d9.js" crossorigin="anonymous"></script>
+  </head>
+ 
+  <body>
+    <!-- Ready to use Font Awesome. Activate interlock. Dynotherms - connected. Infracells - up. Icons are go! -->
+  </body>
+</html>
+  
   <div class="contents">
     <div class="first-view">
     <%= link_to image_tag("topguitar.jpg", class: :topimage) %>
@@ -5,3 +17,17 @@
     <div class="middle-content">
     </div>
   </div>
+
+<p class="pagetop" style="display: block;">
+<a href="#">
+<i class="fas fa-arrow-up"></i>
+</a>
+</p>
+
+<p class="postpage" style="display: block;">
+<a href="/posts/new">
+<i class="fas fa-guitar"><span class="postin">投稿する</span></i>
+</a>
+</p>
+
+
