--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,42 +1,15 @@
-<div class="main">
-  <div class="inner">
-    <div class="form__wrapper">
-      <h2 class="page-heading">ユーザー新規登録</h2>
-
-        <%# 「モデル名」にはUserモデルであれば@userを渡しましょう。%>
-        <%# 「新規登録機能へのパス」は、devise導入後にrails routesを実行してdevise/registrations#createへのパスを確認し、記載してください。 %>
         <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
 
-        <div class="field">
-          <%= f.label :nickname, "ニックネーム" %><br />
-          <%= f.text_field :nickname, id:"user_name" %>
-        </div>
+          <h1>無料登録</h1>
 
-        <div class="field">
-          <%= f.label :email, "メールアドレス" %><br />
-          <%= f.email_field :email, id:"user_email", autofocus: true, autocomplete: "email" %>
-        </div>
+          <%= f.text_field :nickname, placeholder:"ニックネーム", id:"user_name" %>
 
-        <div class="field">
-          <%= f.label :password, "パスワード（6文字以上）" %><br />
-          <%= f.password_field :password, id:"user_password", autocomplete: "new-password" %>
-        </div>
+          <%= f.email_field :email, placeholder:"メールアドレス", id:"user_email", autofocus: true, autocomplete: "email" %>
 
-        <div class="field">
-          <%= f.label :encrypted_password, "パスワード再入力" %><br />
-          <%= f.password_field :password_confirmation, id:"user_password_confirmation", autocomplete: "new-password" %>
-        </div>
+          <%= f.password_field :password, placeholder:"パスワード", id:"user_password", autocomplete: "new-password" %>
 
-        <div class="field">
-          <%= f.label :profile, "プロフィール" %><br />
-          <%= f.text_area :profile, class: :form__text, id:"user_profile" %>
-        </div>
+          <%= f.password_field :password_confirmation, placeholder:"パスワード再入力", id:"user_password_confirmation", autocomplete: "new-password" %>
 
-        <div class="actions">
+          <button>Sign up</button>
 
-          <%= f.submit "新規登録", class: :form__btn  %>
-        </div>
       <% end %>
-    </div>
-  </div>
-</div>
