--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,12 +17,12 @@
       <div class="navbar">
         <ul class="nav-lists">
       <% if user_signed_in? %>
-      <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
+      <li><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "logout" %></li>
       <li><%= link_to current_user.nickname, user_path(current_user.id), class: "user-nickname" %></li>
       <% else %>
       <li><%= link_to 'Login', new_user_session_path, class: "login" %></li>
       <li><%= link_to 'Sign up', new_user_registration_path, class: "sign-up" %></li>
-      <li><%= link_to 'Guest', user_session_path, class: "guest", method: :post %></li>
+      <li><%= link_to 'Guest', users_guest_login_path, class: "guest", method: :post %></li>
       <% end %>
         </ul>
         </div>
