--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -34,95 +34,133 @@ a {
   color: #3b4043;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap');
+
 /* ヘッダー */
 
 .header {
+  position: fixed;
   background-color: black;
-  height: 100px;
-  display: flex;
-}
-
-.searchbar {
-  width: 33vw;
-}
-
-.heading {
-  width: 34vw;
-}
-
-.title {
-  margin: 25px 170px;
-  color: #ffffff;
-  font-size: 35px;
-}
-
-.navbar {
-  width: 33vw;
-}
-
-.nav-lists {
-  display: flex;
-  justify-content: space-around;
-  color: #ffffff;
-  font-size: large;
-  margin: 60px 70px 0px 70px;
-}
-
-li {
-  list-style: none;
-}
-
-.user-nickname {
-  text-decoration: none;
-  margin-right: 3vw;
-  color: white;
-  font-weight: bold;
-}
-
-
-.logout {
-  text-decoration: none;
-  color: white;
-}
-
-.login {
-  text-decoration: none;
-  line-height: 32px;
-  margin-right: 3vw;
-  color: white;
-}
-
-.sign-up {
-  text-decoration: none;
-  color: white;
-}
-
-.guest {
-  text-emphasis: none;
-  color: white;
-}
-
-
-/* メイン画像上 */
-
-.contents {
-
-}
-
-.first-view{
-  height: 60vh;
-}
-
-.topimage {
-  height: 85vh;
+  margin: 0;
+  padding: 0px 200.5px 0px 200.5px;
+  height: 88px;
   width: 100%;
+  opacity: 0.9;
 }
 
-/* メイン画像下 */
-.middle-content{
-  height: 450px;
-  background-color: black;
+.inner {
+  width: 1024px;
+  margin: 0 auto;
 }
+.nav {
+  margin-bottom: 5px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav__left {
+  margin-top: 0px;
+}
+
+.logo {
+  width: 200px;
+}
+.nav__btn{
+  display: inline-block;
+  padding: 0.4em 1.6em;
+  font-size: 1.2em;
+  color: white;
+  text-decoration: none;
+  user-select: none;
+  border: none;
+  border-radius: 3px;
+  transition: 0.4s ease;
+  font-family: 'Jost', sans-serif;
+  margin-top: 20px;
+}
+.nav__btn:hover{
+  color: rgb(255, 245, 112);
+}
+
+.nav__logout{
+  display: inline-block;
+  padding: 0.4em 1.6em;
+  font-size: 0.8em;
+  color: #87CEFA;
+  text-decoration: none;
+  user-select: none;
+}
+.nav__logout:hover{
+  opacity: 0.5;
+}
+
+/* フォーム周り */
+.form__wrapper{
+  min-height: calc(100vh - 161px);
+}
+
+.form__text {
+  width: 50%;
+}
+
+.field{
+  margin: 10px 0;
+}
+
+.actions{
+  margin-bottom: 40px;
+}
+
+.form__btn{
+  display: inline-block;
+  padding: 0.4em 1.6em;
+  font-size: 0.8em;
+  color: #fff;
+  text-decoration: none;
+  user-select: none;
+  background: #87CEFA;
+  border: 1px #87CEFA solid;
+  border-radius: 3px;
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.14), 0 1px 2px 0 rgba(0, 0, 0, 0.12);
+  transition: 0.2s ease;
+}
+
+.form__btn:hover {
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2), 0 1px 8px 0 rgba(0, 0, 0, 0.12);
+  cursor: pointer;
+}
+
+hr {
+  margin-bottom: 0px;
+  margin-top: -5px;
+  width: 100%;
+  height: 3px;
+  background: radial-gradient(white,black 80%);
+  border: 0;
+}
+
+/* メイン画像 */
+.onesheet {
+  background-image: url(topguitar.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  color: #fff;
+  padding-bottom: 789px;
+}
+
+.twosheet {
+  background-color: rgb(249, 255, 244);
+  width: 100%;
+  height: 1500px;
+}
+
 
 /* 投稿ボタン */
 .fixed_btn{
@@ -138,14 +176,20 @@ li {
   position: fixed;
   right: 50px;
   bottom: 200px;
+  transition: .2s;
 }
+
+.pagetop:hover {
+  transform: scale(1.1);
+}
+
 .pagetop a{
   display: block;
   font-size: 0;
   width: 50px;
   height: 50px;
+  background-color: #0fffff;
   text-align: center;
-  background: orange;
   border-radius: 50%;
   line-height: 50px;
 }
@@ -160,14 +204,20 @@ li {
   position: fixed;
   right: 26px;
   bottom: 60px;
+  transition: .2s;
 }
+
+.postpage:hover {
+  transform: scale(1.1);
+}
+
 .postpage a{
   display: block;
   font-size: 0;
   width: 100px;
   height: 100px;
   text-align: center;
-  background: rgb(253, 184, 253);
+  background: deepskyblue;
   border-radius: 50%;
   line-height: 50px;
 }
@@ -185,4 +235,22 @@ li {
   text-decoration: none;
   margin-bottom: 5px;
   font-family: 'ヒラギノ角ゴ Std W8','Hiragino Kaku Gothic Std';
+}
+
+.regi {
+    background-image: url(regi.jpg);
+    height: 789px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.log {
+  background-image: url(login.jpg);
+  height: 789px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
