--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,23 +1,24 @@
   <!doctype html>
 <html>
   <head>
-    <!-- Place your kit's code here -->
     <script src="https://kit.fontawesome.com/f30c31a4d9.js" crossorigin="anonymous"></script>
   </head>
  
   <body>
-    <!-- Ready to use Font Awesome. Activate interlock. Dynotherms - connected. Infracells - up. Icons are go! -->
+  <div class="onesheet"></div>
+  <div class="twosheet">
+    <% @posts.each do |post| %>
+    <%= link_to image_tag(post.image, class:"google-btn"), "#" %>
+      <p><%= post.title %></p>
+      <span class="name">
+        <%= post.summary %>
+      </span>
+    </div>
+  <% end %>
+  </div>
   </body>
 </html>
   
-  <div class="contents">
-    <div class="first-view">
-    <%= link_to image_tag("topguitar.jpg", class: :topimage) %>
-    </div>
-    <div class="middle-content">
-    </div>
-  </div>
-
 <p class="pagetop" style="display: block;">
 <a href="#">
 <i class="fas fa-arrow-up"></i>
