--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,1 +1,8 @@
-新規投稿ページ
+    <%= form_with model: @post, url: posts_path, local: true do |f| %>
+      <%= f.text_area :title, placeholder:"タイトル", id:"post_title" %>
+      <%= f.text_area :summary, placeholder:"詳細", id:"post_summary" %>
+      <%= f.collection_select(:category_id, Category.all, :id, :name, {}, {class:"category-select"}) %>
+        <%= f.file_field :image %>
+      <%= f.submit "投稿する" ,class: :nav__btn %>
+    <% end %>
+
