削除機能実装

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,8 +1,8 @@
-    <%= form_with model: @post, url: posts_path, local: true do |f| %>
+    <%= form_with model: @post, local: true do |f| %>
       <%= f.text_area :title, placeholder:"タイトル", id:"post_title" %>
       <%= f.text_area :summary, placeholder:"詳細", id:"post_summary" %>
       <%= f.collection_select(:category_id, Category.all, :id, :name, {}, {class:"category-select"}) %>
         <%= f.file_field :image %>
-      <%= f.submit "投稿する" ,class: :nav__btn %>
+      <%= f.submit "編集する" ,class: :nav__btn %>
     <% end %>
 
