--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,4 +2,6 @@
 <%= image_tag @post.image %>
 <%= @post.title %>
 <%= @post.summary %>
+<%= link_to "編集する", edit_post_path(@post.id), class: :nav__btn %>
+<%= link_to "削除する", post_path(@post.id), method: :delete, class: :nav__btn %>
 </div>
