--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -66,6 +66,45 @@ a {
 .logo {
   width: 200px;
 }
+
+.nav__center {
+  width: 290px;
+}
+
+.search-form{
+  position:relative;/*フォームの相対位置*/	
+  max-width:270px;/*フォームのサイズ*/
+  margin-top: 18px;
+  margin-left: 15px;
+}
+
+.search-input {
+  position:absolute;/*フォームの絶対位置*/	
+  left:0;
+  top:0; 	
+  outline:0;/*クリック時の青い枠線消す*/	
+  height:30px;/*検索ボックスの高さ*/	
+  width: 140px;
+  padding:0 10px;/*テキスト位置調整*/	 
+  border-radius:12px 0 0 12px;/*検索ボックスの角を丸める*/		
+  background:#eee;/*検索ボックスの背景カラー*/
+}
+
+.search-btn {
+  width:50px;/*検索ボタンの横幅*/ 
+  height:30px;/*検索ボタンの縦幅*/ 
+  position:absolute;/*検索ボタンの絶対位置*/  
+  left:140px;/*検索ボタンの位置調整*/  
+  top:0;
+  border-radius:0 12px 12px 0;/*検索ボタンの角を丸める*/ 
+  background:deepskyblue;/*検索ボタンの背景カラー*/ 
+  border:none;/*検索ボタンの枠線を消す*/ 
+  color:#fff;/*検索ボタンのテキストカラー*/ 
+  font-weight:bold;/*検索ボタンのテキスト太字*/ 
+  font-size:16px;/*検索ボタンのフォントサイズ*/ 
+  padding-top: 3px;
+}
+
 .nav__btn{
   display: inline-block;
   padding: 0.4em 1.6em;
@@ -155,10 +194,32 @@ hr {
   padding-bottom: 789px;
 }
 
+.block1::before{
+  content:"";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  
+  /*ここで三角形のサイズを決める。必ず幅100vwにして、ブラウザサイズいっぱいにしてください。*/
+  border-width: 100px 0 0 100vw ;
+ 
+  /*transparentで余分な線を消す*/
+  border-color: transparent  transparent  transparent #000000;
+}
+
+.block2 {
+  height: 500px;
+  background-color: black;
+}
+
 .twosheet {
   background-color: #e8fdfd;
   width: 100%;
   height: 1500px;
+  padding-top: 15px;
 }
 
 /* Lazy Load Styles */
@@ -204,7 +265,7 @@ html, body {
 
 .card {
   display: inline-block;
-  background-color: cornsilk;
+  background-color: rgb(221, 246, 255);
   border-radius: 10px;
   width: 90%;
   max-width: 20rem;
@@ -212,7 +273,7 @@ html, body {
   font-size: 1rem;
   text-decoration: none;
   overflow: hidden;
-  box-shadow: 0 0 3rem -0.2rem rgba(0,0,0,0.5);
+  box-shadow: 0 0 1.2rem -0.2rem rgba(0,0,0,0.5);
   transition: transform 0.1s ease-in-out, box-shadow 0.1s;
 }
 
@@ -234,6 +295,15 @@ html, body {
 
 .card-description > p {
   margin: 0;
+}
+
+.inst-title {
+  height: 32px;
+  color: gray;
+  font-size: large;
+  font-weight: 900;
+  font-family: 'Hannotate SC', sans-serif;
+
 }
 
 /* 投稿ボタン */
@@ -327,4 +397,12 @@ html, body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+}
+
+.footer {
+  color: #fff;
+  height: 50px;
+  width: 100%;
+  background-color: black;
+  opacity: 0.9;
 }
