--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,14 @@
 
-  <div class="onesheet"></div>
+
+  <div class="onesheet">
+  </div>
   <div class="block1"></div>
   <div class="block2">
   <%= image_tag("YouTube-logo.png", class:"google-btn") %>
   </div>
+  <div class="slide-one"></div>
   <div class="twosheet">
-  <h1>Instruments</h1>
+  <h1 class="head-border">Instruments</h1>
   <ul class="card-list">
     <% @posts.each do |post| %>
     <li class="card">
