--- a/app/views/posts/guitar.html.erb
+++ b/app/views/posts/guitar.html.erb
@@ -1,5 +1,5 @@
   <div class="twosheet">
-  <h1 class="head-border">Instruments</h1>
+  <h1 class="head-border">Guitar</h1>
   <ul class="card-list">
     <% @posts.each do |post| %>
     <li class="card">
