--- a/app/views/posts/help.html.erb
+++ b/app/views/posts/help.html.erb
@@ -1,10 +1,2 @@
-  <div class="twosheet">
-  <h1 class="head-border">Instruments</h1>
-  <ul class="card-list">
-    <% @posts.each do |post| %>
-    <li class="card">
-      <%= link_to image_tag(post.image, class:"google-btn"), post_path(post.id) %>
-        <p class="inst-title"><%= post.title %></p>
-        </li>
-    <% end %>
-  </div>
+
+  <h1 class="head-border">Help</h1>
