--- a/app/views/posts/accessory.html.erb
+++ b/app/views/posts/accessory.html.erb
@@ -1,5 +1,5 @@
   <div class="twosheet">
-  <h1 class="head-border">Instruments</h1>
+  <h1 class="head-border">Accessory</h1>
   <ul class="card-list">
     <% @posts.each do |post| %>
     <li class="card">
@@ -8,3 +8,4 @@
         </li>
     <% end %>
   </div>
+  <div class="footer">フッターでっせ</div>
