--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,8 +4,11 @@
   </div>
   <div class="block1"></div>
   <div class="block2">
-  <%= image_tag("YouTube-logo.png", class:"google-btn") %>
+  <%= image_tag("YouTube-logo.png", class:"youtube-logo") %>
+  <h1 class="youtube-h">This week's Musician</h1>
+  <iframe class="youtube" width="900" height="515" src="https://www.youtube.com/embed/WOY6nwXNteU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
+  <div class="block3"></div>
   <div class="slide-one"></div>
   <div class="twosheet">
   <h1 class="head-border">Instruments</h1>
@@ -13,7 +16,7 @@
     <% @posts.each do |post| %>
     <li class="card">
       <%= link_to image_tag(post.image, class:"google-btn"), post_path(post.id) %>
-        <p class="inst-title"><%= post.title %></p>
+        <p class="inst-title">#<%= post.title %></p>
         </li>
     <% end %>
   </div>
