編集画面ビュー変更

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -32,6 +32,8 @@ img {
 a {
   text-decoration: none;
   color: #3b4043;
+  padding-bottom: 10px;
+  font-family: Georgia, 'Times New Roman', Times, serif
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap');
@@ -151,7 +153,7 @@ nav.active {
 .logo {
   width: 260px;
   height: 85px;
-  margin-right: 10px;
+  margin-right: 0px;
 }
 
 .nav__center {
@@ -300,9 +302,9 @@ hr {
   padding-bottom: calc(10vw + 10px);  
     position: relative;
     overflow: hidden;
-    background: #83a4d4;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #b6fbff, #83a4d4);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #b6fbff, #8eaddd); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #83a4d4; 
+    background: -webkit-linear-gradient(to left, #b6fbff, #83a4d4);
+    background: linear-gradient(to left, #b6fbff, #8eaddd);
     
 }
 
@@ -384,14 +386,17 @@ hr {
   align-items: center;
   border-bottom: none;
   color: #fff;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 50px;
 }
 
 .head-border:before,
 .head-border:after {
   content: "";
-  height: 1px;
+  height: 2px;
   flex-grow: 1;
   background-color: rgb(255, 255, 255);
+  
 }
 
 .head-border:before {
@@ -582,8 +587,93 @@ html, body {
 
 .footer {
   color: #fff;
-  height: 50px;
+  height: 70px;
   width: 100%;
   background-color: black;
   opacity: 0.9;
+}
+
+.footer-f {
+  padding-top: 25px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.post-new {
+  background-image: url(post.jpg);
+  height: 789px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.post-edit {
+  background-image: url(postedit.jpg);
+  height: 789px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+
+textarea {
+  width: 100%;
+  background: transparent;
+  border-bottom: solid 1px deepskyblue;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  font-size: 1rem;
+  padding: 2.5em 0.4em;
+  transition: all 0.4s;
+  color: white;
+  margin: 0.7rem 0;
+  height: 100px;
+}
+
+textarea::placeholder {
+  color: white;
+  font-weight: bold;
+}
+
+textarea:focus {
+  transform: scale3d(1.06,1.06,1.06);
+}
+
+.filelabel{
+  display: block;
+  position: relative;
+  background-color: deepskyblue;
+  color: #fff;
+  font-size: 16px;
+  padding: 10px 20px;
+  border-radius: 20px;
+  transition: all 0.5s;
+  margin-top: 3.3rem;
+  max-width: 420px;
+  margin: 60px auto;
+}
+.filelabel:hover{
+  background-color: rgb(0, 159, 212);
+}
+
+.fileinput{
+  display: none;
+}
+
+.category-select {
+  width: 60%;
+  border-bottom: solid 1px deepskyblue;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  font-size: 1rem;
+  padding: 0.5em 0.4em;
+  transition: all 0.4s;
+  color: white;
+  margin: 3.7rem 0 2.0rem 0;
+  background-color: deepskyblue;
+  border-radius: 20px;
+  margin: 0 auto;
 }
