--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,6 +83,6 @@
     </header>
     
     <%= yield %>
-    
+    <div class="footer"><p class="footer-f">◎ Everyone use MyGear.</p></div>
   </body>
 </html>
